--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   supabase_flutter: ^1.10.23
   supabase: ^1.11.11
   http: ^1.1.0
+  pdf: ^3.10.4
 
 dev_dependencies:
   flutter_test:
