--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   supabase: ^1.11.11
   http: ^1.1.0
   pdf: ^3.10.4
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
