--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,11 @@ dependencies:
   supabase_flutter: ^1.10.23
   supabase: ^1.11.11
   http: ^1.1.0
-  pdf: ^3.10.4
   permission_handler: ^11.0.1
-  path_provider: ^2.1.1
   google_fonts: ^6.1.0
+  open_file: ^3.3.2
+  path_provider: ^2.1.1
+  pdf: ^3.10.4
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +74,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/fonts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -88,12 +88,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
