--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   open_file: ^3.3.2
   path_provider: ^2.1.1
   pdf: ^3.10.4
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
